# hal-9100

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  Makefile  README.md  assistants_extra.v  coq-of-rust.txt  deploy.sh  deploy_railway.sh  deploy_render.sh  hal-9100.toml  index.html  openai-openapi.yaml  render.yaml  sweep.yaml
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  concept.md  config.yml  sweep-template.yml
.github/workflows/: ci.yml  update-openapi.yaml
.sqlx/: query-0d033f3005556eae0700e9dea86fb5ff5a402f4eee9b3d35963a27ef20a31fb7.json  query-0f4cc5c0097db685d94db1daa65be605c49e8d7a3c9a3f0ccd6c561ba27e8007.json  query-14367e4b077cb3f26cb4e749f50961aa086352fea0fa3443a994d30c2e59505a.json  query-158e3a91d36bde11a0cbf37c4d5d6daf0e9ef86ef1a029477caf2cbae6a56c76.json  query-22b5d723ed215d96212dc769bf2c6fa3065eaa3cba8b3a439aa32ab134f9d698.json  query-24927d7d41a031a8205ade2d60b36c06d28871819f31ec0ff8a2ddec5888d5fe.json  query-317a8f0d50de864762d1d2929cff69364550a156f31514e85908b0ada0d4782d.json  query-4108d9dd7b0c83d1f9a33e7be72397421cb0e4bdc09f8af16f872f23b13e8080.json  query-465b4151e326f4be0f7d9a81795a47d7b8b0ecf9adefa3ad4b6771d06a97a1cf.json  query-46bf9ec17f43ce60c475a651fddc23ff310c1b26426df4545f075b8a05ea6295.json  query-475b5d218e231a08d4b394b8e9de4c3f3b8ea4ef59842e4aca521a3ab42aed5e.json  query-4b02abde2e5848ca1fab9f4e6c8e0ffd7fd12ce87f7ebfde2637f3618da4e3a5.json  query-4ce962ce04e24ba3841feaf99d45502b092451f794bef1d847cd2388baf6fc04.json  query-548cfbe133937a7445bb4bd30727fe727282d16bf7f32e119c0151e4e7245f94.json  query-57fa0729ecae7a39172433808770911f10429353028dc82bddd7c1feaa919a62.json  query-5979012167acd3ece48cf3dd4904b09a5f402c10721b9e5a25504206e5f1ed76.json  query-5d8de99a2cb6fe27c44fa23f63d728263ecefe9e27668ca358bef84ce859f3c8.json  query-6dc41a1655cb4c3e9ef7d53a6a212e9563467c3cc3f5b2b1fce652de3b9cca53.json  query-7333b28c6d889bb6cc790130caddb1f17d4456b874398faac26580a9493ee720.json  query-7439e6773ba2e58f634dcc0689e8cc32424943782f5fbc9586141502e7d97054.json  query-78243b2ff8969c1f843f83c45361f734364dd11abe4181c3de2e6876df235329.json  query-7b380c9bea8bcf463c5c534297d217e20745836942c7732def39483dd2dab296.json  query-80ac93bb6908c2ffa672280bbbe5234d52fe3c3277be64c603a5edbdaf299a12.json  query-8db41774e240aefb728af804e76fa4ee8347b6d70b20945e0983fc867bdf8373.json  query-8fe25e403f71a68b9b06af3508c1b5a5b6560f4131a65494868adf550e176e2c.json  query-8ff2dbb4caad19bd90cb6bcbddb591549b2815b6804df083eec1e34cc0b1fbba.json  query-93863a0780eb7e3efb42814df188e594d54cb3658179389b39ff175f13706931.json  query-9a25d3fa674a50a7ba8ac18954a4e4aa804f4e3d1fdee1c4f451392ba82bef9d.json  query-9b68dc98bc00fe931aedcf0a1d63044033f99c2552ffe3d3ea5d3657c3a32f14.json  query-9d0dc6a2d202df017f62fecef87dacdbe72323d167bb757676908a719b98efc7.json  query-9f29e93f7fc1749a8940e9e7437b4e82239293eb19925ef06bad4151e1962ef8.json  query-acf8620b7fc3f1eaa9f3b62b6fff6d9d399c199cf5bbebfe266465ad32872e84.json  query-b44fe33f1e8e662984880c79801e74aa0d83c9fc9c594da19f888c285cdcc1e6.json  query-b52e81dd626f6d1ee9cf72d5e86bc7bacfbd9c54332aef57259c7ffc05b986ca.json  query-ba24d6e7bcc5ee5f644553d59a19192c23179ae431754ba63d7bd1aa968fd7cf.json  query-be30fce50a23ea4ac5d2e90a493be19d0e1a0cf8ec0e6095668954dc02dab6f4.json  query-c377dbc0d18e1766d5457db6f5e23a4af59973b788864c0e98a473e4fe8d489c.json  query-d069fe8edf601a0fcbe330c4cbbcf1d9ea5fb66922887189b4a2cf867f55df6a.json  query-d279f15e6b1608078ceaaa360ada64dc8c7a2b75f14ce860cfaf611ecf18f566.json  query-d349bd72ae9564cc883c50d5de3a9ec25a077984d5b4f76a781ba7594b4520fb.json  (+4 more)
assistants-api-communication/: Cargo.toml
assistants-api-communication/src/: assistants.rs  chat.rs  executor.rs  files.rs  lib.rs  main.rs  messages.rs  models.rs  run_steps.rs  runs.rs  threads.rs
assistants-benches/: Cargo.toml
assistants-benches/results/: 1703798057.json  retrieval_0.json_1703805281.json  retrieval_0.json_1703811340.json
assistants-benches/src/: main.rs  v0.json
assistants-benches/src/cases/: function_calling_0.json  retrieval_0.json
assistants-code-interpreter/: Cargo.toml
assistants-code-interpreter/src/: main.rs
assistants-core/: Cargo.toml
assistants-core/src/: assistant.rs  assistants.rs  code_interpreter.rs  executor.rs  file_storage.rs  function_calling.rs  knowledge-retrieval.rs  lib.rs  main.rs  messages.rs  migrations.sql  models.rs  openapi.rs  prompts.rs  retrieval.rs  run-consumer.rs  run_steps.rs  runs.rs  runs_test.rs  test_data.rs  threads.rs
assistants-extra/: Cargo.toml
assistants-extra/src/: anthropic.rs  lib.rs  llm.rs  main.rs  openai.rs  prompts.rs  tree.rs
assistants-extra/src/openai/: mod.rs  openai.rs
assistants-function-calling/: Cargo.toml
assistants-image-generation/: Cargo.toml
assistants-knowledge-retrieval/: Cargo.toml
assistants-text-generation/: Cargo.toml
coq_of_assistants/: dune-project  dune-project~
coq_of_assistants/_build/: .db  .digest-db  (+1 more)
dashboard/: package.json  pnpm-lock.yaml
docker/: Dockerfile  Dockerfile.code-interpreter  docker-compose.override.yml  docker-compose.yml  entrypoint.sh  pg-healthcheck.sh
examples/: IDEAS.md  README.md  quickstart.ipynb  quickstart.js
hal-9100-api-communication/: Cargo.toml
hal-9100-api-communication/src/: assistants.rs  chat.rs  cli.rs  executor.rs  files.rs  lib.rs  main.rs  messages.rs  models.rs  run_steps.rs  runs.rs  threads.rs
hal-9100-api-communication/src/routes/: assistants.rs  chat.rs  files.rs  router.rs  run_steps.rs  runs.rs  threads.rs
hal-9100-benches/: Cargo.toml
hal-9100-core/: Cargo.toml
hal-9100-core/src/: assistants.rs  code_interpreter.rs  executor.rs  file_storage.rs  function_calling.rs  lib.rs  messages.rs  migrations.sql  models.rs  openapi.rs  pdf_utils.rs  prompts.rs  retrieval.rs  run_steps.rs  runs.rs  test_data.rs  threads.rs
hal-9100-core/src/file_storage/: file_storage.rs  local_storage.rs  minio_storage.rs  mod.rs
hal-9100-extra/: Cargo.toml
hal-9100-extra/src/: anthropic.rs  config.rs  lib.rs  llm.rs  mlc.rs  openai.rs
mlc-llm-rs/: Cargo.toml
(+67 files in other folders)
