[package]
name = "assistants-api-communication"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version= "0.6.20", features = ["headers", "multipart", "macros", "tracing"] }
futures = "0.3"
headers = "0.3"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.7.3", features = ["macros", "postgres", "runtime-async-std-rustls", "json", "uuid"] }
assistants-core = { path = "../assistants-core" }
redis = { version = "0.23.3", features = ["tokio-comp"] }
minio = "0.1.0"
serde_json = "1.0"
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.2.0"
tower-http = { version = "0.4.0", features = ["fs", "limit", "trace", "cors"] }
tower = "0.4.12"
log = "0.4"
env_logger = "0.8"
validator = { version = "0.14.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
# async-openai = "0.17.1"
async-openai = { git = "https://github.com/louis030195/async-openai.git", rev = "b687fdd" }

uuid = { version = "0.8", features = ["serde", "v4"] }
async-stream = "0.3.5"
tokio-stream = { version = "0.1.14", features = ["sync"] }
url = "2.2.2"

[dev-dependencies]
mime = "0.3.16"
hyper = "0.14.11"
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["multipart"] }
sysinfo = "0.23.1"
base64 = "0.13.0"

[build-dependencies]
syn = "1"
