[package]
name = "assistants-benches"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assistants-extra = { path = "../assistants-extra" }

reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
regex = "1.5"
async-openai = "0.17.1"
jsonpath-rust = "0.3.5"


