[package]
name = "assistants-code-interpreter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bollard = "0.10.1"
assistants-extra = { path = "../assistants-extra" }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
