[package]
name = "assistants-code-interpreter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bollard = "0.10.1"
assistants-extra = { path = "../assistants-extra" }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
assistants-core = { path = "../assistants-core" }
dotenv = "0.15.0"
async-openai = "0.17.1"
serde_json = "1.0"
uuid = "0.8.2"
async-recursion = "1.0.5"


