[package]
name = "assistants-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version= "0.6.13", features = ["headers"] }
futures = "0.3"
headers = "0.3"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.5", features = ["macros", "postgres", "runtime-async-std-rustls", "json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
redis = { version = "0.23.3", features = ["tokio-comp"] }
assistants-extra = { path = "../assistants-extra" }
rusoto_core = "0.46.0"
rusoto_s3 = "0.46.0"

[build-dependencies]
syn = "1"

[dev-dependencies]
dotenv = "0.15"
tempfile = "3.2.0"

