[package]
name = "assistants-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version= "0.6.13", features = ["headers"] }
futures = "0.3"
headers = "0.3"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.5", features = ["macros", "postgres", "runtime-async-std-rustls", "json", "offline"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
redis = { version = "0.23.3", features = ["tokio-comp"] }
assistants-extra = { path = "../assistants-extra" }
bytes = "1.0"
rusty-s3 = "0.5.0"
url = "2.2.2"
reqwest = { version = "0.11.6", features = ["json"] }
log = "0.4"
env_logger = "0.8"
lopdf = "0.31.0"
regex = "1.5.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6.1", features = ["serde", "v4"] }

[build-dependencies]
syn = "1"

[dev-dependencies]
dotenv = "0.15"
tempfile = "3.2.0"

