[package]
name = "assistants-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version= "0.6.13", features = ["headers"] }
futures = "0.3"
headers = "0.3"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.7.3", features = ["macros", "postgres", "runtime-async-std-rustls", "json", "uuid"] }

serde_json = "1.0"
oas3 = "0.4"

serde = { version = "1.0", features = ["derive"] }
redis = { version = "0.23.3", features = ["tokio-comp"] }
bytes = "1.0"
rusty-s3 = "0.5.0"
url = "2.2.2"
reqwest = { version = "0.11.6", features = ["json"] }
log = "0.4"
env_logger = "0.8"
lopdf = "0.31.0"
regex = "1.5.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6.1", features = ["serde", "v4"] }
# async-openai = "0.17.1"
async-openai = { git = "https://github.com/louis030195/async-openai.git" }

# code interpreter
bollard = "0.10.1"
async-recursion = "1.0.5"

# extra 
assistants-extra = { path = "../assistants-extra" }


tiktoken-rs = "0.5.7"


[build-dependencies]
syn = "1"

[dev-dependencies]
dotenv = "0.15"
tempfile = "3.2.0"

