[package]
name = "hal-9100-extra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
bytes = "1.0"
log = "0.4"
# async-openai = "0.17.1"
async-openai = { git = "https://github.com/louis030195/async-openai.git" }

tiktoken-rs = "0.5.7"

# prod

toml = "0.8.10"

[dev-dependencies]
dotenv = "0.15.0"
httpmock = { version = "0.6", features = ["standalone"] }
regex = "1.10.2"

[features]
ci = []